--- a/Histopathologic Cancer Detection.ipynb
+++ b/Histopathologic Cancer Detection.ipynb
@@ -5009,7 +5009,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 188,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -5018,7 +5018,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 189,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -5028,7 +5028,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 190,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -5037,7 +5037,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 191,
    "metadata": {},
    "outputs": [
     {
@@ -5059,7 +5059,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 192,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -5071,7 +5071,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 193,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -5080,7 +5080,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 194,
    "metadata": {},
    "outputs": [
     {
@@ -5106,49 +5106,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 195,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/html": [
-       "\n",
-       "    <div>\n",
-       "        <style>\n",
-       "            /* Turns off some styling */\n",
-       "            progress {\n",
-       "                /* gets rid of default border in Firefox and Opera. */\n",
-       "                border: none;\n",
-       "                /* Needs to be in here for Safari polyfill so background images work as expected. */\n",
-       "                background-size: auto;\n",
-       "            }\n",
-       "            .progress-bar-interrupted, .progress-bar-interrupted::-webkit-progress-bar {\n",
-       "                background: #F44336;\n",
-       "            }\n",
-       "        </style>\n",
-       "      <progress value='6' class='' max='8', style='width:300px; height:20px; vertical-align: middle;'></progress>\n",
-       "      75.00% [6/8 08:32<02:50]\n",
-       "    </div>\n",
-       "    \n",
-       "\n",
-       "\n",
-       "    <div>\n",
-       "        <style>\n",
-       "            /* Turns off some styling */\n",
-       "            progress {\n",
-       "                /* gets rid of default border in Firefox and Opera. */\n",
-       "                border: none;\n",
-       "                /* Needs to be in here for Safari polyfill so background images work as expected. */\n",
-       "                background-size: auto;\n",
-       "            }\n",
-       "            .progress-bar-interrupted, .progress-bar-interrupted::-webkit-progress-bar {\n",
-       "                background: #F44336;\n",
-       "            }\n",
-       "        </style>\n",
-       "      <progress value='201' class='' max='898', style='width:300px; height:20px; vertical-align: middle;'></progress>\n",
-       "      22.38% [201/898 00:19<01:07]\n",
-       "    </div>\n",
-       "    "
+       "Total time: 11:24 <p>"
       ],
       "text/plain": [
        "<IPython.core.display.HTML object>"
@@ -5170,13 +5134,13 @@
     {
      "data": {
       "text/plain": [
-       "tensor([[3.2551e-01, 6.7449e-01],\n",
-       "        [3.6279e-05, 9.9996e-01],\n",
-       "        [7.4026e-01, 2.5974e-01],\n",
+       "tensor([[2.5799e-01, 7.4201e-01],\n",
+       "        [6.9348e-04, 9.9931e-01],\n",
+       "        [8.2502e-01, 1.7498e-01],\n",
        "        ...,\n",
-       "        [9.8216e-01, 1.7837e-02],\n",
-       "        [9.8258e-01, 1.7424e-02],\n",
-       "        [9.8762e-01, 1.2383e-02]])"
+       "        [9.8634e-01, 1.3663e-02],\n",
+       "        [9.8176e-01, 1.8241e-02],\n",
+       "        [9.8584e-01, 1.4155e-02]])"
       ]
      },
      "execution_count": 196,
@@ -5198,7 +5162,7 @@
     {
      "data": {
       "text/plain": [
-       "tensor([0.6745, 1.0000, 0.2597,  ..., 0.0178, 0.0174, 0.0124])"
+       "tensor([0.7420, 0.9993, 0.1750,  ..., 0.0137, 0.0182, 0.0142])"
       ]
      },
      "execution_count": 197,
@@ -5292,7 +5256,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 202,
+   "execution_count": 199,
    "metadata": {},
    "outputs": [
     {
@@ -5324,42 +5288,42 @@
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>daaac65c384d235e976ea97d2291aace14117ca6</td>\n",
-       "      <td>1</td>\n",
+       "      <td>0.742005</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>304a9c4006d6a3ee6162acb78c9bc888ce011987</td>\n",
-       "      <td>1</td>\n",
+       "      <td>0.999307</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>11190169984dc13e3b6cea262de280355ea400b1</td>\n",
-       "      <td>0</td>\n",
+       "      <td>0.174978</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>56c8afa2a0e2d929611454eb930d3c5b0aa823f1</td>\n",
-       "      <td>0</td>\n",
+       "      <td>0.560703</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>857cb7887fdd47a4c879bf5c9204ae9aebff96fe</td>\n",
-       "      <td>0</td>\n",
+       "      <td>0.075021</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "                                         id  label\n",
-       "0  daaac65c384d235e976ea97d2291aace14117ca6      1\n",
-       "1  304a9c4006d6a3ee6162acb78c9bc888ce011987      1\n",
-       "2  11190169984dc13e3b6cea262de280355ea400b1      0\n",
-       "3  56c8afa2a0e2d929611454eb930d3c5b0aa823f1      0\n",
-       "4  857cb7887fdd47a4c879bf5c9204ae9aebff96fe      0"
+       "                                         id     label\n",
+       "0  daaac65c384d235e976ea97d2291aace14117ca6  0.742005\n",
+       "1  304a9c4006d6a3ee6162acb78c9bc888ce011987  0.999307\n",
+       "2  11190169984dc13e3b6cea262de280355ea400b1  0.174978\n",
+       "3  56c8afa2a0e2d929611454eb930d3c5b0aa823f1  0.560703\n",
+       "4  857cb7887fdd47a4c879bf5c9204ae9aebff96fe  0.075021"
       ]
      },
-     "execution_count": 202,
+     "execution_count": 199,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -5375,7 +5339,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 203,
+   "execution_count": 200,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -5384,21 +5348,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 204,
+   "execution_count": 203,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Warning: Your Kaggle API key is readable by otherusers on this system! To fix this, you can run'chmod 600 /home/martijn/.kaggle/kaggle.json'\n",
-      "100%|███████████████████████████████████████| 1.33M/1.33M [00:06<00:00, 224kB/s]\n",
+      "100%|███████████████████████████████████████| 1.58M/1.58M [00:06<00:00, 254kB/s]\n",
       "Successfully submitted to Histopathologic Cancer Detection"
      ]
     }
    ],
    "source": [
-    "!kaggle competitions submit -c histopathologic-cancer-detection -f hc_submission.csv.gz -m \"Submission {0} {1}\".format(model_name, pred_score) "
+    "!kaggle competitions submit -c histopathologic-cancer-detection -f hc_submission.csv.gz -m \"Submission \" "
    ]
   },
   {
